[package]
name = "script1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^ 0.14"
mime = "^ 0.2.0"
serde = "^ 1.0"
serde_json = "^ 1.0"
yup-oauth2 = "^7.0"
url = "= 1.7"
http = "^0.2"
tokio = "^1.0"
tower-service = "^0.3.1"
hyper-rustls = "0.23.0"


[build-dependencies]
